# the_cruiser

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: cruiser.rviz
debug/: diagnostics.sh  run_cmd_seq.txt
include/the_cruiser/implementations/: catmull_rom_generator.hpp  passive_safety_strategy.hpp
include/the_cruiser/interfaces/: i_safety_strategy.hpp  i_trajectory_generator.hpp
include/the_cruiser/types/: trajectory_point.hpp
launch/: cruiser_launch.py  cruiser_standalone.launch.py
scripts/: demo.sh  verify_control.sh
src/implementations/: catmull_rom_generator.cpp
src/nodes/: cruiser_node.cpp
tests/: test_trajectory_generator.cpp
